--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 header {
@@ -21,16 +23,18 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    height: 100%;
+    width: 700px;
 }
 
 .grid {
-    display: grid;
+    display: inline-grid;
     border: 1px solid black;
     grid-template-columns: repeat(16, 1fr);
-    height: 100%;
+    height: 500px;
+    width: 575px;
 }
 
 .grid-cell {
-    width: 100px;
+    background: white;
+    border: 1px solid black;
 }
