--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     height: 100%;
+    background: cadetblue;
     display: flex;
     flex-direction: column;
     justify-content: center;
