Changed text font to Cabin

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: 'Cabin', sans-serif;
 }
 
 header {
